--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,19 @@
 textarea {
   display: block;
-  width: 150px;
+  width: 100%;
   height: 150px;
+  font-family: "Lucida Console", Monaco, monospace;
+}
+#layers {
+  width: 640px;
   margin: auto;
+}
+#console {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 200px;
+  height: 200px;
 }
 #gritter-notice-wrapper {
   position: fixed;
