--- a/source/common.styl
+++ b/source/common.styl
@@ -7,7 +7,8 @@ textarea
   font-family "Lucida Console", Monaco, monospace
 
 #layers
-  width 640px
+  display inline-block
+  width 400px
   margin auto
 
 #console
@@ -16,3 +17,7 @@ textarea
   right 0
   width 200px
   height 200px
+
+#tiles
+  img:nth-child(n+37)
+    border 2px solid red
