--- a/public/main.css
+++ b/public/main.css
@@ -19,6 +19,13 @@ textarea {
 #tiles img:nth-child(n+37) {
   border: 2px solid #f00;
 }
+#props {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 200px;
+  height: 200px;
+}
 #gritter-notice-wrapper {
   position: fixed;
   bottom: 10px;
