--- a/source/common.styl
+++ b/source/common.styl
@@ -21,3 +21,10 @@ textarea
 #tiles
   img:nth-child(n+37)
     border 2px solid red
+
+#props
+  position fixed
+  right 0
+  top 0
+  width 200px
+  height 200px
