--- a/source/common.styl
+++ b/source/common.styl
@@ -19,8 +19,8 @@ textarea
   height 200px
 
 #tiles
-  img:nth-child(n+37)
-    border 2px solid red
+  img
+    border 1px solid gray
 
 #props
   position fixed
