--- a/public/main.css
+++ b/public/main.css
@@ -16,8 +16,8 @@ textarea {
   width: 200px;
   height: 200px;
 }
-#tiles img:nth-child(n+37) {
-  border: 2px solid #f00;
+#tiles img {
+  border: 1px solid #808080;
 }
 #props {
   position: fixed;
