--- a/source/common.styl
+++ b/source/common.styl
@@ -26,7 +26,9 @@ transform()
   height 200px
 
 #map
-  position relative
+  position absolute
+  width 640px
+  height 480px
 
   canvas
     position absolute
